<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/im_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/foto_de_t_o_feo"
        app:srcCompat="@drawable/victor" />

    <ImageView
        android:id="@+id/im_gafas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/gafas"
        android:visibility="invisible"
        app:srcCompat="@drawable/gafas" />

    <ImageView
        android:id="@+id/im_barba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/barba_y_sombrerp_o"
        android:visibility="invisible"
        app:srcCompat="@drawable/barba_sombrero" />

    <Button
        android:id="@+id/bt_poner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="50dp"
        android:onClick="bt_poner_click"
        android:text="@string/poner" />

    <Button
        android:id="@+id/bt_quitar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:onClick="bt_quitar_poner_click"
        android:text="@string/quitar" />

</FrameLayout>